--- a/css/main.css
+++ b/css/main.css
@@ -2393,16 +2393,26 @@ a {
     border-top-left-radius: 32px;
     border-bottom-left-radius: 32px;
     position: fixed;
-    right: 0;
-    z-index: 15; }
+    max-width: 300px;
+    transition: all .2s ease-in-out;
+    z-index: 9999999; }
     @media (min-width: 1200px) {
       .content-flex .main .free-trial {
-        padding: 45px;
-        bottom: 123px; } }
+        padding: 35px 25px;
+        bottom: 50px; } }
     @media (max-width: 1199px) {
       .content-flex .main .free-trial {
         padding: 25px;
         bottom: 30px; } }
+    @media (min-width: 968px) {
+      .content-flex .main .free-trial {
+        right: -300px; } }
+    @media (max-width: 967px) {
+      .content-flex .main .free-trial {
+        right: -200px; } }
+    .content-flex .main .free-trial.active {
+      transition: all .2s ease-in-out;
+      right: 0; }
     .content-flex .main .free-trial .btn-cancel.btn-free-trial {
       color: #343A40;
       font-size: 17px;
@@ -2411,7 +2421,7 @@ a {
       background-color: #fff; }
       @media (min-width: 1200px) {
         .content-flex .main .free-trial .btn-cancel.btn-free-trial {
-          padding: 20px 70px; } }
+          padding: 15px 60px; } }
       @media (max-width: 1199px) {
         .content-flex .main .free-trial .btn-cancel.btn-free-trial {
           padding: 10px 45px; } }
@@ -2420,14 +2430,31 @@ a {
       color: #fff; }
       @media (min-width: 968px) {
         .content-flex .main .free-trial .free-trial-text {
-          font-size: 18px;
-          width: 250px;
+          font-size: 16px;
+          max-width: 250px;
           margin-bottom: 18px; } }
       @media (max-width: 967px) {
         .content-flex .main .free-trial .free-trial-text {
           font-size: 14px;
           margin-bottom: 10px;
           width: 150px; } }
+    .content-flex .main .free-trial .free-trial-arrow {
+      position: absolute;
+      width: 45px;
+      height: 45px;
+      border-radius: 100%;
+      line-height: 43px;
+      padding-left: 5px;
+      background-color: #904BFF;
+      left: -20px;
+      top: 50%;
+      transform: translateY(-50%);
+      opacity: 1; }
+      .content-flex .main .free-trial .free-trial-arrow svg {
+        width: 15px;
+        height: 20px; }
+    .content-flex .main .free-trial.active .free-trial-arrow {
+      opacity: 0; }
 .content-flex .join-conf-wrapper, .content-flex .meeting-plans-wrapper {
   width: 100%; }
   @media (min-width: 1200px) {
@@ -3057,7 +3084,7 @@ a {
   position: absolute;
   font-size: 17px;
   left: 20px;
-  z-index: 10000;
+  z-index: 5000;
   padding: 1px 10px;
   background: #fff;
   color: #93A0B1;
@@ -5487,9 +5514,6 @@ input.calendar:focus, input.calendar:checked, input.calendar:active, input.calen
 
 .p-relative {
   position: relative; }
-
-.free-trial {
-  display: none; }
 
 #calendarx {
   margin-top: 30px; }
